added html tags and initial elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,52 @@
     <link rel="stylesheet" href="./stylesheets/css/master.css">
   </head>
   <body>
-
+    <header>
+    <nav>
+      <img src="./images/dog-icon.svg" alt="dog icon" />
+      <h3>How</h3>
+      <h3>What</h3>
+      <h3>Facts</h3>
+    </nav>
+    </header>
+    <section>
+      <h2>A Site About Some Dogs</h2>
+      <img src="./images/dog1-sq.jpg" alt"dog wearing a bandana" />
+      <h3>What Are Dogs</h3>
+    </section>
+    <article>
+      <h3>How</h3>
+      <img src="./images/dog2-sq.jpg" alt="dog with pulled back ears" />
+      <p>Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table.</p>
+      <p>PUt butt in owner's face chase mice, so run outside as soon as door open but you call</p>
+      <p> this cat food? Stare at the wall.  play with food and get confused by dust.</p>
+      <h3>How to Dog</h3>
+    </article>
+    <article>
+      <h3>What</h3>
+      <img src="./images/dog3-sq.jpg" alt="black border collie" />
+      <p>Soft kitty warm kitty little ball of furr.  Hunt anything that moves meowing non stop</p>
+      <p> for food stand in front of the computer screen knock dish off table head butt cant </p>
+      <p>eat out of my own dish, then cats take over the world hide when guests come over.</p>
+      <h3>What is Dog</h3>
+    </article>
+    <article>
+      <h3>Facts</h3>
+      <img src="./images/dog4-sq.jpg" alt="dog with red bandana" />
+      <p>Destroy the blinds chase imaginary bugs, so lie on your belly and purr when you are </p>
+      <p>asleep.  Fall asleep on the washing machine give attitude hunt anything that moves </p>
+      <p>groom yourself 4 hours - checked, be fabulous for the rest of the day - checked!</p>
+      <h3>Dog Facts</h3>
+    </article>
+    <section>
+    </section>
+    <footer>
+      <h4>Learn About Dogs Online</h4>
+      <img src="./images/facebook.svg" alt="facebook icon" />
+      <img src="./images/twitter.svg" alt="twitter icon" />
+      <img src="./images/instagram.svg" alt="instagram icon" />
+      <img src="./images/linkedin.svg" alt="linkedin icon" />
+      <h4>See this on GitHub</h4>
+    </footer>
   </body>
 </html>
