added more styling to master.css

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <header>
     <nav>
       <img src="./images/dog-icon.svg" alt="dog icon" />
-      <h3>How</h3>
-      <h3>What</h3>
-      <h3>Facts</h3>
+      <ul>
+      <li>How</li>
+      <li>What</li>
+      <li>Facts</li>
+    </ul>
     </nav>
     </header>
-    <section>
+    <section class="CTA">
       <h2>A Site About Some Dogs</h2>
       <img src="./images/dog1-sq.jpg" alt"dog wearing a bandana" />
       <h3>What Are Dogs</h3>
     </section>
-    <article>
+    <section class="center_section">
+    <article class="left">
       <h3>How</h3>
       <img src="./images/dog2-sq.jpg" alt="dog with pulled back ears" />
       <p>Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table.</p>
@@ -27,7 +30,7 @@
       <p> this cat food? Stare at the wall.  play with food and get confused by dust.</p>
       <h3>How to Dog</h3>
     </article>
-    <article>
+    <article class="center">
       <h3>What</h3>
       <img src="./images/dog3-sq.jpg" alt="black border collie" />
       <p>Soft kitty warm kitty little ball of furr.  Hunt anything that moves meowing non stop</p>
@@ -35,7 +38,7 @@
       <p>eat out of my own dish, then cats take over the world hide when guests come over.</p>
       <h3>What is Dog</h3>
     </article>
-    <article>
+    <article class="right">
       <h3>Facts</h3>
       <img src="./images/dog4-sq.jpg" alt="dog with red bandana" />
       <p>Destroy the blinds chase imaginary bugs, so lie on your belly and purr when you are </p>
@@ -43,7 +46,7 @@
       <p>groom yourself 4 hours - checked, be fabulous for the rest of the day - checked!</p>
       <h3>Dog Facts</h3>
     </article>
-    <section>
+
     </section>
     <footer>
       <h4>Learn About Dogs Online</h4>
